--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 I am currently enrolled at Per Scholas, a boot camp-style training program aim to retool professionals and to help with career transition. 
                 In my previous position at Likewise Inc and US Bank, I worked as a quality analyst with a focus on test automation. 
                 I learned a lot from that position, but my passion is in building tools, rather than solely testing them. 
-                Please see my <a href ="https://www.linkedin.com/in/sataporn-w-66268177">LinkedIn</a> profile for a detailed career timeline.  
+                Please see my <a href ="https://www.linkedin.com/in/sataporn-w-66268177" target="_blank">LinkedIn</a> profile for a detailed career timeline.  
             </p>
             <ul style="font-weight: bold;"> Projects:
                 <li> Project 1</li>
