--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             </h3>
             
             <p>
-                Thank you for visiting my webpage. I am an aspiring software engineer. 
-                I am currently enrolled at Per Scholas, a boot camp-style training program aim to retool professionals and to help with career transition. 
+               Thank you for visiting my webpage. I am currently enrolled at Per Scholas, a React bootcamp.  
                 In my previous position at Likewise Inc and US Bank, I worked as a quality analyst with a focus on test automation. 
                 I learned a lot from that position, but my passion is in building tools, rather than solely testing them. 
                 Please see my <a href ="https://www.linkedin.com/in/sataporn-w-66268177" target="_blank">LinkedIn</a> profile for a detailed career timeline.  
