--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
             <h2>
                 Sataporn Worasilpchai
             </h2>
+
+            <div style="display: flex">
             <img src = 'profile_picture.png' alt="profile image" style="width:200px;height:200px;">
-            <h3>
-                Welcome to my webpage!
-            </h3>
             
-            <p>
+            <span>
                 Thank you for visiting my webpage. I am an aspiring software engineer. 
                 I am currently enrolled at Per Scholas, a boot camp-style training program aim to retool professionals and to help with career transition. 
                 In my previous position at Likewise Inc and US Bank, I worked as a quality analyst with a focus on test automation. 
                 I learned a lot from that position, but my passion is in building tools, rather than solely testing them. 
                 Please see my <a href ="https://www.linkedin.com/in/sataporn-w-66268177" target="_blank">LinkedIn</a> profile for a detailed career timeline.  
-            </p>
+            </span>
+            </div>
             <ul style="font-weight: bold;"> Projects:
                 <li> Project 1</li>
                 <li> Project 2</li>
