--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
 
             <div>
                 <h4>About Me:</h4>
+                <div class="detailed-info">
+                    <p>
+                        I grew up in Atlanta, GA. I attended Georgia Institute of Technology for my undergraduate degree from 2011 to 2018. During that time I explored various industries and studies. Toward the end of my time at Tech, I reflected on my journey and what I enjoyed the most. One thing became apparent, CS-2316 was my favorite class. The crux of that was to build an AOL-style chat program. For the longest time, I thought that computers and software were so complex that I wouldn't be able to understand how it all works, but this project reveals “how the sausage gets made”, and I want to go make more sausages! With the blessing from my parents, I stayed for another 2 years at Georgia Tech to add a computer science degree. 
+                    </p>
+                    <p>
+                        Upon graduation, I took a job at Elavon (U.S. Bank) as a Jr. Quality Engineer. I loved my time there. I got to work on a brand-new product line, sadly the project got shelved after I left. In the short time that I was there, I worked with incredibly smart and talented people, I got to spend a few weeks during the holiday season building a prototype extension to the main product. Since Elavon's focus is on merchant payment processing, the prototype aims to add value by including a table and waitlist management system to help capture customers and increase throughput. I worked on the backend API portion of the project, which was a nice change to the everyday task. 
+                    </p>
+    
+                    <p>
+                        After a year at Elavon, I relocated to Seattle to pursue a love interest at the time and to join an early-stage start-up, Likewise. Likewise is a recommendation platform for digital entertainment. Likewise is building an incredibly interesting data set for the entertainment industry. I was the second QA at the company, I focused on the web app experience and data integrity. I developed web UI automation tests with Cypress and wrote Python scripts to validate data from 3rd party sources. Web automation reduced web release time by almost 50%. My Python script found that about 10% of links from the 3rd party data providers were incorrect. 
+                    </p>
+                </div>
 
             </div>
         </main>
