--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </p>
         
                         </p>
-                        In my previous position at Whitepages, Likewise, and US Bank, I worked as a quality engineer with a focus on test automation. I learned a lot from that position, but my passion is in building new things that impact people, rather than solely testing them. Please see my <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a> profile for a detailed career timeline.
+                        In my previous position at Likewise, and US Bank, I worked as a quality engineer with a focus on test automation. I learned a lot from that position, but my passion is in building new things that impact people, rather than solely testing them. Please see my <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a> profile for a detailed career timeline.
                         </p>
                         <a href="Sataporn_Resume_June4.pdf" target="_blank"  rel="noopener noreferrer">
                             Current Resume
@@ -43,7 +43,7 @@
                     This project utilizes word embeddings to discover courses relevant to job titles or areas of interest. Word embeddings offer flexible context-based searching, eliminating the need for lexicons or word matching.
                 </li>
                 <li> 
-                    <a href="https://sitkum.systems/">
+                    <a href="https://sitkum.systems/" target="_blank"  rel="noopener noreferrer">
                         SitKum Systems
                     </a>
                     Ongoing research in various domains of machine learning. 
@@ -71,7 +71,7 @@
 
                 </div>
 
-                <div>
+                <div class="contact-section">
                     <h4>Contact:</h4>
                     <div class="detailed-info">
                         <p>If you are interested in working together, please reach out to me via <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a>. I'd love to talk about machine learning and building software prototypes.</p>
