--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </p>
         
                         </p>
-                        In my previous position at Likewise, and US Bank, I worked as a quality engineer with a focus on test automation. I learned a lot from that position, but my passion is in building new things that impact people, rather than solely testing them. Please see my <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a> profile for a detailed career timeline.
+                        In my previous position at Likewise and US Bank, I worked as a quality engineer with a focus on test automation. I learned a lot from that position, but my passion is in building new things that impact people, rather than solely testing them. Please see my <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a> profile for a detailed career timeline.
                         </p>
                         <a href="Sataporn_Resume_June4.pdf" target="_blank"  rel="noopener noreferrer">
                             Current Resume
