rack and strap and resume

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </p>
                         In my previous position at Likewise and US Bank, I worked as a quality engineer with a focus on test automation. I learned a lot from that position, but my passion is in building new things that impact people, rather than solely testing them. Please see my <a href ="https://www.linkedin.com/in/sataporn-w/" target="_blank"  rel="noopener noreferrer">LinkedIn</a> profile for a detailed career timeline.
                         </p>
-                        <a href="Sataporn_Resume_June4.pdf" target="_blank"  rel="noopener noreferrer">
+                        <a href="Sataporn_Worasilpchai_Resume_June13.pdf" target="_blank"  rel="noopener noreferrer">
                             Current Resume
                         </a>
                 </div>
@@ -44,11 +44,14 @@
                 </li>
                 <li> 
                     <a href="https://sitkum.systems/" target="_blank"  rel="noopener noreferrer">
-                        SitKum Systems
-                    </a>
+                        SitKum Systems</a>
                     Ongoing research in various domains of machine learning. 
                 </li>
-                <li>Rack and Strap. An online marketplace for transporting bulky outdoor recreation equipment such as kayaks, canoes, and bikes.</li>
+                <li>
+                    <a href="https://rackandstrap.com/" target="_blank"  rel="noopener noreferrer">
+                        Rack and Strap</a>
+                    An online marketplace for transporting bulky outdoor recreation equipment such as kayaks, canoes, and bikes.
+                </li>
 
             </ul>
 
