--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <ul style="font-weight: bold;"> Projects and ongoing work:
                 <li class="firstItem">
-                    <a href="https://www.nonwor.fyi/course-vector/" target="_blank"  rel="noopener noreferrer"> MOOC Recommender</a>
+                    <a href="https://github.com/nonwor/course-vector" target="_blank"  rel="noopener noreferrer"> MOOC Recommender</a>
                     This project utilizes word embeddings to discover courses relevant to job titles or areas of interest. Word embeddings offer flexible context-based searching, eliminating the need for lexicons or word matching.
                 </li>
                 <li> 
@@ -51,6 +51,10 @@
                     <a href="https://rackandstrap.com/" target="_blank"  rel="noopener noreferrer">
                         Rack and Strap</a>
                     An online marketplace for transporting bulky outdoor recreation equipment such as kayaks, canoes, and bikes.
+                </li>
+                <li>
+                    <a href="https://docs.google.com/presentation/d/1JAIHx2wwnu8B6gABDHRPmxnrA-OXuvHUoHC2By4SRpo/edit?usp=sharing" target="_blank" rel="noopener noreferrer"> Offline LLM for LRC</a>
+                    The goal of this project is to develop an offline LLM specialized in medical diagnoses for low resources countries and communities. 
                 </li>
 
             </ul>
